# todo_files

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PLAN.md  README.md  main.py  pyproject.toml
example_files/: example.todo
todo_files/: cli.py  config.py  log.py  models.py  parser.py  sync.py  writer.py
todo_files/mappers/: base.py  jira.py
todo_files/storage/: database.py  models.py
